File Name: CHANGES

03/19/2014 FASP 1.4.6:
- Change AMG setup output layout. 
- Clean up a few files for further optimization. 
- Update the auto header file.
- Update FASP webpage.

03/14/2014 FASP 1.4.5:
- Fix a return value inconsistent problem in interface_samg.c
- Fix a macro typo in amg_setup_sa.c 
- Use specified name of parameter instead of value in parameters.c
- Fix a relative directory problem in VS08.
- Fix file property problem for *.sh files.
- Fix number of iterations problem in regression.c.
- Update regression test results. 
- Update TODO list.

02/26/2014 FASP 1.4.4:
- Fix missing print information in Fortran wrapper.
- Fix a typo in test.c and test.f90.
- Add SuperLU to CMake.
- Fix an initial parameter problem for iterative solvers.

02/01/2014 FASP 1.4.3:
- Fix a bug introduced in the previous version.
- Fix wront regression test results caused by -ffast-math.
- Fix several un-used variable warnings.
- Fix a bug due to disk failures. 
- Remove DEBUG_MODE setting from fasp.h and add it to Makefile.
- Add version tag to the current version.
- Update webpage and developer list.

01/18/2014 FASP 1.4.2:
- Add command line options for FASP functions.
- Report a bug in testbsr.c during ILU setup.
- Add input parameter check.
- Check auto-vectorization results: a few subroutines need to be fixed.
- Update TODO list and website.

12/27/2013 FASP 1.4.1:
- Fix a bug in ADD of CSR matrices.
- Fix a merge problem in HG.

12/25/2013 FASP 1.4.0:
- Check C1 criteria in CF splitting.
- Fix a bug in standard interpolation.
- Fix a typo in interpolation.
- Tested in UNCONG. 
- Modify VS08 and VS10 compiling parameters.
- Update FASP webpage and documentation.
- Update regression test results.

12/09/2013 FASP 1.3.8:
- Delete '' caused by '\n' in windows in the file graphic.c.
- Fix a relative path problem for MUMPS interface.
- Fix an OpenMP setting problem in VS08 x64 Release configuration.

11/17/2013 FASP 1.3.7: