@@ -180,7 +180,6 @@
 #define SMOOTHER_BLKOIL        11  /**< Used in monolithic AMG for black-oil */
 #define SMOOTHER_SPETEN        19  /**< Used in monolithic AMG for black-oil */
 
-
 /**
  * \brief Definition of coarsening types
  */
