@@ -2,8 +2,9 @@ File Name: CHANGES
 
 03/19/2014 FASP 1.4.6:
 - Change AMG setup output layout. 
-- Clean up a few files for further optimization. 
-- Update the auto header file.
+- Clean up a few files for further optimization.
+- Check diagonal preference branch for GS.
+- Update FASP header files.
 - Update FASP webpage.
 
 03/14/2014 FASP 1.4.5:
